--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -28,3 +28,14 @@ jobs:
           RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
           MARKET_DATA_API_KEY: ${{ secrets.MARKET_DATA_API_KEY }}
         run: python jobs/main.py
+
+      - name: Commit signal history
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add data/signals_history.csv
+          git diff --staged --quiet || git commit -m "Daily signal update: $(date +'%Y-%m-%d')"
+          
+      - name: Push changes
+        run: |
+          git push || echo "No changes to push"
