Add weekly performance summary email
Features:
- Created weekly_performance.html template with stats display
- Added weekly_summary.py to calculate and send performance metrics
- Updated weekly_backtest.yml workflow to send email after backtest
- Displays hit rate, alpha, avg return, and top performers
- Includes explanations of SPY and alpha for clarity
- No image attachments - lightweight HTML email only

The email sends every Sunday at 8 AM ET after backtest completes.
Shows 1-week and 1-month performance with actionable insights.

--- a/.github/workflows/weekly_backtest.yml
+++ b/.github/workflows/weekly_backtest.yml
@@ -35,12 +35,27 @@ jobs:
             echo "No backtest results generated - likely insufficient history"
           fi
 
+      - name: Generate visualizations
+        if: steps.check_files.outputs.results_exist == 'true'
+        run: |
+          python jobs/visualize.py || echo "Visualization completed with warnings"
+
+      - name: Send weekly performance email
+        if: steps.check_files.outputs.results_exist == 'true'
+        env:
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+        run: |
+          python jobs/weekly_summary.py || echo "Weekly summary completed with warnings"
+
       - name: Commit results
         if: steps.check_files.outputs.results_exist == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add data/backtest_results.csv
+          git add data/plots/*.png || echo "No plots to commit"
           git diff --staged --quiet || git commit -m "Weekly backtest: $(date +'%Y-%m-%d')"
           
       - name: Push changes
