--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -2,7 +2,7 @@ name: Daily Insider Report
 
 on:
   schedule:
-    - cron: '0 23 * * 1-5'  # Runs at 7PM ET (23:00 UTC) weekdays
+    - cron: '0 11 * * 1-5'  # Runs at 7AM ET (11:00 UTC) weekdays
   workflow_dispatch:
 
 jobs:
