--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ __pycache__/
 .env
 .DS_Store
 data/plots/*.png
+data/paper_portfolio.json
+data/paper_trading.log
+data/signals_history.csv
+data/backtest_results.csv
