--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -46,22 +46,27 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           
-          # Try to fetch data branch, create if doesn't exist
-          git fetch origin data:data 2>/dev/null || git checkout -b data || git checkout data
-          
-          # Make sure we're on data branch
-          git checkout data
-          
-          # Ensure data directory exists
+          # Ensure data branch exists (create it if missing)
+          if git show-ref --quiet refs/heads/data; then
+            git checkout data
+          else
+            git fetch origin data || true
+            if git show-ref --quiet refs/remotes/origin/data; then
+              git checkout -b data origin/data
+            else
+              git checkout -b data
+            fi
+          fi
+      
           mkdir -p data
-          
-          # Copy the generated file
+      
+          # Copy the generated file (safe even if unchanged)
           cp data/signals_history.csv data/signals_history.csv 2>/dev/null || true
-          
-          # Add and commit
-          git add data/signals_history.csv
+      
+          # Force add ignored file and commit if there are changes
+          git add -f data/signals_history.csv
           git diff --staged --quiet || git commit -m "Daily signal update: $(date +'%Y-%m-%d')"
-          
+      
       - name: Push changes to data branch
         if: steps.check_history.outputs.history_exists == 'true'
         run: |
