--- a/.github/workflows/weekly_backtest.yml
+++ b/.github/workflows/weekly_backtest.yml
@@ -3,7 +3,7 @@ name: Weekly Backtest
 on:
   schedule:
     - cron: '0 12 * * 0'  # Runs every Sunday at 12pm UTC (8am ET)
-  workflow_dispatch:  # Allow manual runs
+  workflow_dispatch:
 
 jobs:
   backtest:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch all history for branch operations
+          fetch-depth: 0  # Ensure full history for rebase
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -22,12 +22,6 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-
-      - name: Fetch data branch
-        run: |
-          # Fetch the data branch to get signals_history.csv
-          git fetch origin data:data || echo "No data branch yet"
-          git checkout data -- data/signals_history.csv 2>/dev/null || echo "No history file yet"
 
       - name: Run backtest
         run: |
@@ -57,35 +51,19 @@ jobs:
         run: |
           python jobs/weekly_summary.py || echo "Weekly summary completed with warnings"
 
-      - name: Commit results to data branch
+      - name: Commit and push backtest results to main
         if: steps.check_files.outputs.results_exist == 'true'
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          
-          # Ensure data branch exists (create it if missing)
-          if git show-ref --quiet refs/heads/data; then
-            git checkout data
-          else
-            git fetch origin data || true
-            if git show-ref --quiet refs/remotes/origin/data; then
-              git checkout -b data origin/data
-            else
-              git checkout -b data
-            fi
-          fi
-      
-          mkdir -p data/plots
-      
-          # Force add ignored or new files
-          git add -f data/backtest_results.csv
-          git add -f data/plots/*.png 2>/dev/null || echo "No plots to commit"
-      
-          # Commit only if there are changes
-          git diff --staged --quiet || git commit -m "Weekly backtest: $(date +'%Y-%m-%d')"
 
-      - name: Push changes to data branch
-        if: steps.check_files.outputs.results_exist == 'true'
-        run: |
-          git push origin data
+          # Explicitly add ignored files
+          git add -f data/backtest_results.csv data/plots/*.png 2>/dev/null || true
 
+          git commit -m "Weekly backtest update: $(date +'%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+
+          # Rebase on latest main to prevent merge issues
+          git pull --rebase origin main || true
+
+          # Push changes back to main
+          git push origin HEAD:main
